--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,6 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        file: ./Dockerfile
+        file: ./build/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/nestjs-test:master
