--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "npx nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
-		"start:dev": "nest start --watch",
+		"start:dev": "npx nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"test": "jest",
@@ -20,48 +20,34 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
-		"@nestjs/common": "^8.0.0",
-		"@nestjs/core": "^8.0.0",
-		"@nestjs/platform-express": "^8.0.0",
-		"reflect-metadata": "^0.1.13",
-		"rimraf": "^3.0.2",
-		"rxjs": "^7.2.0"
+		"@nestjs/cli": "8.2.6",
+		"@nestjs/common": "9.4.2",
+		"@nestjs/config": "2.3.2",
+		"@nestjs/core": "9.4.2",
+		"@nestjs/jwt": "10.0.3",
+		"@nestjs/passport": "9.0.3",
+		"@nestjs/typeorm": "8.0.3",
+		"bcrypt": "^5.1.0",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.0",
+		"mysql2": "^2.3.3",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.1",
+		"reflect-metadata": "0.1.13",
+		"rxjs": "^7.8.1",
+		"typeorm": "0.2.45",
+		"typeorm-transactional-cls-hooked": "0.1.21"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^8.0.0",
-		"@nestjs/schematics": "^8.0.0",
-		"@nestjs/testing": "^8.0.0",
-		"@types/express": "^4.17.13",
-		"@types/jest": "27.4.1",
-		"@types/node": "^16.0.0",
-		"@types/supertest": "^2.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
-		"eslint": "^8.0.1",
-		"jest": "^27.2.5",
-		"source-map-support": "^0.5.20",
-		"supertest": "^6.1.3",
-		"ts-jest": "^27.0.3",
-		"ts-loader": "^9.2.3",
-		"ts-node": "^10.0.0",
-		"tsconfig-paths": "^3.10.1",
-		"typescript": "^4.3.5"
-	},
-	"jest": {
-		"moduleFileExtensions": [
-			"js",
-			"json",
-			"ts"
-		],
-		"rootDir": "src",
-		"testRegex": ".*\\.spec\\.ts$",
-		"transform": {
-			"^.+\\.(t|j)s$": "ts-jest"
-		},
-		"collectCoverageFrom": [
-			"**/*.(t|j)s"
-		],
-		"coverageDirectory": "../coverage",
-		"testEnvironment": "node"
+		"@nestjs/platform-fastify": "^9.4.2",
+		"@types/bcrypt": "^5.0.0",
+		"@types/node": "20.2.5",
+		"@types/passport-jwt": "^3.0.8",
+		"@types/validator": "^13.7.17",
+		"@typescript-eslint/eslint-plugin": "^5.59.9",
+		"@typescript-eslint/parser": "^5.59.9",
+		"eslint": "^8.42.0",
+		"source-map-support": "^0.5.21",
+		"typescript": "4.6.2"
 	}
 }
