--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@nestjs/platform-express": "^8.0.0",
 		"@nestjs/cli": "8.2.6",
 		"@nestjs/common": "9.4.2",
 		"@nestjs/config": "2.3.2",
